--- a/Overview.html
+++ b/Overview.html
@@ -34,8 +34,40 @@
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia aliquid quo quae nemo architecto nihil et illum sapiente sed, harum reiciendis corporis eaque nam? Perspiciatis minima ullam ducimus aperiam tempore?</p>
     </div>
 
-    <div class="main">
-        <div></div>
+    <div class="plot">
+        <div class="c1">
+        <h1>How did it start?</h1>  
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis, nulla. Ad, numquam officia magnam eos reprehenderit fugit exercitationem sed tempore alias debitis nihil cumque unde rerum iusto molestiae itaque neque.</p>
+        </div>
+
+        <div class="c2">
+            <h1>What builds the tension?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum labore nihil eaque sit commodi aliquid laborum illo delectus repellendus minus! Fugiat officiis ratione dolore molestias iusto! Ipsum repellat commodi quos.</p>
+        </div>
+
+        <div class="c3">
+            <h1>What is the intense part?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor similique deleniti distinctio rerum eos est. Itaque quia temporibus aliquam, ratione, voluptas nisi quaerat quidem, optio maxime veritatis praesentium eaque quos.</p>
+        </div>
+
+        <div class="c4"></div>
+        <h1>What happens after?</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil reiciendis nemo velit repellendus odio distinctio blanditiis harum veniam libero! Dignissimos, distinctio. Sunt labore culpa praesentium quidem tempore aspernatur alias ut!</p>
+        </div>
+
+        <div class="c5">
+            <h1>How is peace or closure achieved</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis ipsa perferendis at consequatur laborum officia unde, totam repellendus minus aliquam veniam asperiores corporis, maxime aspernatur ea laboriosam eius magnam?</p>            
+        </div>
+
+        <div class="c6">
+            <h1>What is the final consequence?</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque in ipsam, libero perspiciatis asperiores expedita exercitationem quibusdam voluptatibus incidunt molestias consequatur temporibus fuga delectus officia. Nisi excepturi maiores illum temporibus.</p>
+        </div>
     </div>
+        <div class="theme">
+            <h1>What is the theme?</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cupiditate voluptatibus esse totam explicabo hic architecto velit tempora quod ut fuga voluptate dolore dolorum, tenetur inventore tempore mollitia libero eos.</p>            
+        </div>
 </body>
 </html>
