--- a/Overview.html
+++ b/Overview.html
@@ -129,6 +129,6 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cupiditate voluptatibus esse totam explicabo hic architecto velit tempora quod ut fuga voluptate dolore dolorum, tenetur inventore tempore mollitia libero eos.</p>            
     </div>
 
-    <script src="script.js"></script>
+    <script src="read.js"></script>
 </body>
 </html>
