--- a/Overview.html
+++ b/Overview.html
@@ -125,7 +125,35 @@
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cupiditate voluptatibus esse totam explicabo hic architecto velit tempora quod ut fuga voluptate dolore dolorum, tenetur inventore tempore mollitia libero eos.</p>            
     </div>
 
-    <!-- DITO MO ILAGAY YUNG IMAGES -->
+    <!-- MEMBERS INFO -->
+    <h1 id="desc">Group Members</h1>
+    <div id="Info">
+        <!-- PICTURE FRAME -->
+        <div class="frame">
+            <img id="mem1" src="IMAGE/Shiela.jpeg" >
+            <h2>Shiela Mae Pranada</h2>
+        </div>
+
+        <div class="frame">
+            <img id="mem2" src="IMAGE/jam.png" >
+            <h2>Jamelle Rustria</h2>
+        </div>
+
+        <div class="frame">
+            <img id="leader" src="IMAGE/shaun.jpg" >
+            <h2>Shaun Mikael Piconada</h2>
+        </div>
+
+        <div class="frame">
+            <img id="mem3" src="IMAGE/renzo.png" >
+            <h2>Renzo Tolentino</h2>
+        </div>
+
+        <div class="frame">
+            <img id="mem4" src="IMAGE/aq2.jpg" >
+            <h2>James Dranzer Peralta</h2>
+        </div>
+    </div>
 
     <script src="read.js"></script>
 </body>
