--- a/index.html
+++ b/index.html
@@ -127,32 +127,27 @@
 
         <!-- MEMBERS INFO -->
         <div id="memberCon" class="section">
-            <h1 id="desc">Group Members</h1>
+            <h1 id="desc" class="buttonAnim">Group Members</h1>
             <div id="Info">
                 <!-- PICTURE FRAME -->
                 <div class="frame">
-                    <img id="mem1" src="IMAGE/Shiela.jpeg" >
-                    <h2>Shiela Mae Pranada</h2>
+                    <img class="authorAnim" id="mem1" src="IMAGE/shielaCard.png" >
                 </div>
 
                 <div class="frame">
-                    <img id="mem2" src="IMAGE/jam.png" >
-                    <h2>Jamelle Rustria</h2>
+                    <img class="descAnim" id="mem2" src="IMAGE/jamelleCard.png" >
                 </div>
 
                 <div class="frame">
-                    <img id="leader" src="IMAGE/shaun.jpg" >
-                    <h2>Shaun Mikael Piconada</h2>
+                    <img class="ratingAnim" id="leader" src="IMAGE/shaunCard.png" >
                 </div>
 
                 <div class="frame">
-                    <img id="mem3" src="IMAGE/renzo.png" >
-                    <h2>Renzo Tolentino</h2>
+                    <img class="titleAnim" id="mem3" src="IMAGE/renzoCard.png" >
                 </div>
 
                 <div class="frame">
-                    <img id="mem4" src="IMAGE/aq2.jpg" >
-                    <h2>James Dranzer Peralta</h2>
+                    <img class="authorAnim" id="mem4" src="IMAGE/jamesCard.png" >
                 </div>
             </div>
         </div>
@@ -703,11 +698,11 @@ a {
     }
 
     #setting h1, #characterization h1, #theme h1, #plot h1 {
-        font-size: 50px;
+        font-size: 40px;
     }
 
     #setting p, #characterization p, #theme p, #plot p {
-        font-size: 24px;
+        font-size: 20px;
     }
 
     #memberCon {
