--- a/index.html
+++ b/index.html
@@ -16,19 +16,18 @@
             <!-- NAVIGATION BAR -->
             <nav>
                 <!-- SUBJECT NAME -->
-                <a class="logoName" href="#overview">Read 101</a>
+                <a class="logoName logoAnimation" href="#overview">Read 101</a>
 
                 <!-- NAVIGATION LIST -->
-                <div id="navBar" class="navLinkList">
+                <div id="navBar" class="navLinkList navBarAnim">
                     <a class="navLinkItem" href="#overview">Overview</a>
                     <a class="navLinkItem" href="#setting">Setting</a>
                     <a class="navLinkItem" href="#characterization">Characterization</a>
                     <a class="navLinkItem" href="#plot">Plot</a>
-                    <a class="navLinkItem" href="#theme">Theme</a>
                 </div>
 
                 <!-- HAMBURGER ICON CONTAINER -->
-                <div class="hamburgerIconCon">
+                <div class="hamburgerIconCon navBarAnim">
                     <i id="hamburgerIcon" class="fa-solid fa-bars"></i>
                 </div>
 
@@ -37,21 +36,21 @@
             <div class="content">
                 <!-- FIRST DIV ELEMENT -->
                 <div class="titleCon">
-                    <p>The Tell Tale Heart</p>
-                    <a href="https://www.goodreads.com/author/show/4624490.Edgar_Allan_Poe">By: Edgar Allan Poe</a>
+                    <p class="titleAnim">The Tell Tale Heart</p>
+                    <a class="authorAnim" href="https://www.goodreads.com/author/show/4624490.Edgar_Allan_Poe">By: Edgar Allan Poe</a>
                 </div>
 
                 <!-- SECOND DIV ELEMENT -->
                 <div class="storyInfoCon">
-                    <p>In this classic psychological thriller, the reader will find many more questions than answers. Even though this is one of Poe's shortest stories, nevertheless it has become one of his most highest regarded works. It is a profound and, at times, ambiguous investigation of the paranoia that may lie within the depths of one man's mind...</p>
-                    <div class="ratingCon">
+                    <p class="descAnim">In this classic psychological thriller, the reader will find many more questions than answers. Even though this is one of Poe's shortest stories, nevertheless it has become one of his most highest regarded works. It is a profound and, at times, ambiguous investigation of the paranoia that may lie within the depths of one man's mind...</p>
+                    <div class="ratingCon ratingAnim">
                         <img src="IMAGE/star.png" alt="">
                         <div class="textCon">
                             <p>4.2/5</p>
                             <a href="https://www.goodreads.com/book/show/899492.The_Tell_Tale_Heart">Ratings on GoodRead</a>
                         </div>
                     </div>
-                    <button id="readNowBtn">
+                    <button class="buttonAnim" id="readNowBtn">
                         <p>Read now!</p>
                         <i class="fa-solid fa-book-open"></i>
                     </button>
@@ -61,14 +60,14 @@
 
         <!-- SETTING -->
         <div id="setting" class="section">
-            <h1>Where did it happen?</h1>
-            <p>The setting of the story creates a tense atmosphere which highlights the narrator's psychological torment. While the story does not explicitly state that it takes place in the old man's house, there are hints to this, particularly in scenes set in the old man's bedroom. The majority of the events take place every night when the narrator looks at the old man while sleeping, which is also when the murder takes place.</p>
+            <h1 class="titleAnim">Where did it happen?</h1>
+            <p class="authorAnim">The setting of the story creates a tense atmosphere which highlights the narrator's psychological torment. While the story does not explicitly state that it takes place in the old man's house, there are hints to this, particularly in scenes set in the old man's bedroom. The majority of the events take place every night when the narrator looks at the old man while sleeping, which is also when the murder takes place.</p>
         </div>
 
         <!-- CHARACTERIZATION -->
-        <div id="characterization" class="section">
-            <h1>Who are they?</h1>
-            <p>The protagonist and narrator of Edgar Allan Poe's The Tell-Tale Heart is an unnamed killer who has a mental illness. that became obsessed and fixated on the "vulture eyes of his victim," which they perceived as evil. The antagonist is the old man who is depicted as frail and unaware of the protagonist's hatred with his eyes. He became a victim not because of his actions but by his physical appearance, which made his death senseless and tragic. The supporting characters are the neighbor and officers. The neighbor heard a noise from the old man's house that made them call the officers. The officers went to the house and didn't suspect anything, but the protagonist went mad and admitted the killing.</p>
+        <div id="characterization" class="section" style="text-align: right;">
+            <h1 class="titleAnim">Who are they?</h1>
+            <p class="authorAnim">The protagonist and narrator of Edgar Allan Poe's The Tell-Tale Heart is an unnamed killer who has a mental illness. that became obsessed and fixated on the "vulture eyes of his victim," which they perceived as evil. The antagonist is the old man who is depicted as frail and unaware of the protagonist's hatred with his eyes. He became a victim not because of his actions but by his physical appearance, which made his death senseless and tragic. The supporting characters are the neighbor and officers. The neighbor heard a noise from the old man's house that made them call the officers. The officers went to the house and didn't suspect anything, but the protagonist went mad and admitted the killing.</p>
         </div>
 
         <!-- PLOT -->
@@ -77,38 +76,38 @@
             <div class="textCon">
                 <!-- EXPOSITION -->
                 <div id="c1" >
-                    <h1 style="margin-bottom: 40px;">How did it start?</h1>  
-                    <p>The Tell-Tale Heart by Edgar Allan Poe explores the story of a mentally unstable individual consumed by paranoia and obsession. The narrator focuses on defining the old man who has "vulture eyes," claiming that it's evil that leads to planning and committing murder. The narrator also explained how detailed they observed the old man for a week and executed the crime on the 8th day, explaining how the killer killed the old man, dismembering the old parts, and how the killer cleaned the crime scene, ensuring that there's no trace of the crime, and hid the body parts below the wooden plank. As the police officers came to investigate the disturbance, the killer talked to them without showing any remorse or fear from what they had done with the old man, but as they continued to talk, the killer heard the sound of the old man's heartbeat. The killer began to panic in his mind. Later on, eaten by guilt, the killer confessed the crime to the police officers.
+                    <h1 class="titleAnim" style="margin-bottom: 40px;">How did it start?</h1>  
+                    <p class="authorAnim">The Tell-Tale Heart by Edgar Allan Poe explores the story of a mentally unstable individual consumed by paranoia and obsession. The narrator focuses on defining the old man who has "vulture eyes," claiming that it's evil that leads to planning and committing murder. The narrator also explained how detailed they observed the old man for a week and executed the crime on the 8th day, explaining how the killer killed the old man, dismembering the old parts, and how the killer cleaned the crime scene, ensuring that there's no trace of the crime, and hid the body parts below the wooden plank. As the police officers came to investigate the disturbance, the killer talked to them without showing any remorse or fear from what they had done with the old man, but as they continued to talk, the killer heard the sound of the old man's heartbeat. The killer began to panic in his mind. Later on, eaten by guilt, the killer confessed the crime to the police officers.
                         </p>
                 </div>
 
                 <!-- RISING ACTION -->
                 <div id="c2"  style="display: none;">
-                    <h1 style="margin-bottom: 40px;">What builds the tension?</h1>
-                    <p>The rising action begins when the narrator becomes so obsessed with the old man's eyes that he refers to them as the "vulture eye". This leads him to plan the murder of the old man to get rid of his eyes. Every night for a week, the narrator sneaks into the room of the old man to observe what the old man does in a pitch dark room and make sure that he will not wake up the old man. The tension builds as the narrator grows more paranoid on the eye and being more and more anxious about murdering the old man.</p>
+                    <h1 class="titleAnim" style="margin-bottom: 40px;">What builds the tension?</h1>
+                    <p class="authorAnim">The rising action begins when the narrator becomes so obsessed with the old man's eyes that he refers to them as the "vulture eye". This leads him to plan the murder of the old man to get rid of his eyes. Every night for a week, the narrator sneaks into the room of the old man to observe what the old man does in a pitch dark room and make sure that he will not wake up the old man. The tension builds as the narrator grows more paranoid on the eye and being more and more anxious about murdering the old man.</p>
                 </div>
 
                 <!-- CLIMAX -->
                 <div id="c3"  style="display: none;">
-                    <h1 style="margin-bottom: 40px;">What is the intense part?</h1>
-                    <p>The climax of "The Tell-Tale Heart" occurs when the narrator, overwhelmed by the relentless sound of the old man's heartbeat, loses control. He suffocates the old man with his mattress in a moment of insanity. The sound of the heartbeat, which had previously tormented him, continues to haunt him even after the murder.</p>
+                    <h1 class="titleAnim" style="margin-bottom: 40px;">What is the intense part?</h1>
+                    <p class="authorAnim">The climax of "The Tell-Tale Heart" occurs when the narrator, overwhelmed by the relentless sound of the old man's heartbeat, loses control. He suffocates the old man with his mattress in a moment of insanity. The sound of the heartbeat, which had previously tormented him, continues to haunt him even after the murder.</p>
                 </div>
 
                 <!-- FALLING ACTION -->
                 <div id="c4"  style="display: none;">
-                    <h1 style="margin-bottom: 40px;">What happens after?</h1>
-                    <p>After committing the murder, the narrator hides the old man’s body under the floorboards and clean up meticulously, feeling a twisted sense of triumph and confidence in his crime. When police officers arrive in the morning to investigate a scream reported by a neighbor, he calmly welcomes them and even places their chairs above the hidden body, believing he has outsmarted them.</p>
+                    <h1 class="titleAnim" style="margin-bottom: 40px;">What happens after?</h1>
+                    <p class="authorAnim">After committing the murder, the narrator hides the old man’s body under the floorboards and clean up meticulously, feeling a twisted sense of triumph and confidence in his crime. When police officers arrive in the morning to investigate a scream reported by a neighbor, he calmly welcomes them and even places their chairs above the hidden body, believing he has outsmarted them.</p>
                 </div>
             
                 <!-- RESOLUTION -->
                 <div id="c5"  style="display: none;">
-                    <h1 style="margin-bottom: 40px;">How is peace or closure achieved</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis ipsa perferendis at consequatur laborum officia unde, totam repellendus minus aliquam veniam asperiores corporis, maxime aspernatur ea laboriosam eius magnam?</p>            
+                    <h1 class="titleAnim" style="margin-bottom: 40px;">How is peace or closure achieved</h1>
+                    <p class="authorAnim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis ipsa perferendis at consequatur laborum officia unde, totam repellendus minus aliquam veniam asperiores corporis, maxime aspernatur ea laboriosam eius magnam?</p>            
                 </div>
             </div>
 
             <!-- BUTTON CONTAINER -->
-            <div class="buttonCon">
+            <div class="buttonCon buttonAnim">
                 <button id="left">
                     <i id= "leftButton" class="fa-solid fa-angle-left" ></i>
                 </button>
@@ -117,12 +116,6 @@
                     <i id = "rightButton" class="fa-solid fa-angle-right"></i>
                 </button>
             </div>
-        </div>
-
-        <!-- THEME -->
-        <div id="theme" class="section">
-            <h1>What is the theme?</h1>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit cupiditate voluptatibus esse totam explicabo hic architecto velit tempora quod ut fuga voluptate dolore dolorum, tenetur inventore tempore mollitia libero eos.</p>            
         </div>
 
         <!-- MEMBERS INFO -->
