--- a/index.html
+++ b/index.html
@@ -701,6 +701,10 @@ a {
     #memberCon {
         height: fit-content;
     }
+
+    .buttonCon button {
+        transform: scale(0.7);
+    }
 }
 
 @media screen and (max-width: 375px) {
