--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <!-- RESOLUTION -->
                 <div id="c5"  style="display: none;">
                     <h1 class="titleAnim" style="margin-bottom: 40px;">How is peace or closure achieved</h1>
-                    <p class="authorAnim">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis ipsa perferendis at consequatur laborum officia unde, totam repellendus minus aliquam veniam asperiores corporis, maxime aspernatur ea laboriosam eius magnam?</p>            
+                    <p class="authorAnim">The resolution of "The Tell-Tale Heart" is when the narrator, overwhelmed by guilt and the imagined sound of the old man's beating heart, confesses to the murder to the police officers. He reveals the hidden body beneath the floorboards, thus resolving the story's central conflict.</p>            
                 </div>
             </div>
 
